# kinode_mnist

./: README.md
kinode_mnist/: Cargo.toml
kinode_mnist/src/: lib.rs  ml_types.rs
pkg/: manifest.json  metadata.json
